--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -38,9 +38,13 @@
     background-color: rgb(240,251,200);
     position: relative;
     left: 30px;
-
+    box-shadow: 0px 3px 10px 0px #F8F8FF
+    
 }
 .calculator {
     background-color: rgb(189,189,189);
     padding:20px;
+    width: 340px;
+    height: 360px;
+    border-radius: 10px;
 }
