--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -9,6 +9,9 @@
  left: 30px;
  font-weight: bold;
  font-family: Lucida Sans Unicode;
+ border-color: black;
+ border-width: 1px;
+ box-shadow: 0px 3px 10px 3px #F8F8FF inset;
 }
 
 .rows #zero{
@@ -38,7 +41,9 @@
     background-color: rgb(240,251,200);
     position: relative;
     left: 30px;
-    box-shadow: 0px 3px 10px 0px #F8F8FF
+    box-shadow: 0px 3px 10px 0px #F8F8FF;
+    border-width: 2px;
+    border-color: rgb(36,36,36);
     
 }
 .calculator {
