--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -33,9 +33,25 @@
 }
 
 #display {
-    height: 80px;
+    height: 40px;
     width: 270px;
     margin-top:10px;
+    margin-bottom: 0px;
+    border-radius: 10px;
+    background-color: rgb(240,251,200);
+    position: relative;
+    left: 30px;
+    box-shadow: 0px 3px 10px 0px #F8F8FF;
+    border-width: 2px;
+    border-color: rgb(36,36,36);
+    text-align:center;
+    font-weight: bold;
+    font-family: Lucida Sans Unicode;
+}
+#output {
+    height: 40px;
+    width: 270px;
+    margin-top:0px;
     margin-bottom: 10px;
     border-radius: 10px;
     background-color: rgb(240,251,200);
