--- a/apple-calculator.css
+++ b/apple-calculator.css
@@ -31,9 +31,8 @@
    top:-42px;
 
 }
-
-#display {
-    height: 40px;
+#total {
+    height: 80px;
     width: 270px;
     margin-top:10px;
     margin-bottom: 0px;
@@ -48,15 +47,27 @@
     font-weight: bold;
     font-family: Lucida Sans Unicode;
 }
-#output {
-    height: 40px;
-    width: 270px;
-    margin-top:0px;
-    margin-bottom: 10px;
-    border-radius: 10px;
+#display {
+    height: 30px;
+    width: 250px;
     background-color: rgb(240,251,200);
     position: relative;
-    left: 30px;
+    top: -80px;
+    right: -40px;
+    box-shadow: 0px 3px 10px 0px #F8F8FF;
+    border-width: 2px;
+    border-color: rgb(36,36,36);
+    text-align:center;
+    font-weight: bold;
+    font-family: Lucida Sans Unicode;
+}
+#output {
+    height: 40px;
+    width: 250px;
+    background-color: rgb(240,251,200);
+    position: relative;
+    ;
+    right: -40px;
     box-shadow: 0px 3px 10px 0px #F8F8FF;
     border-width: 2px;
     border-color: rgb(36,36,36);
